<resources>
    <string name="app_name">Inversiones</string>
    <string name="welcome">Creciendo Juntos</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="registro">Si no se encuentra registrado</string>
    <string name="registro1">Registrarse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar">Enviar</string>
    <string name="cuenta">Número de cuenta</string>
    <string name="cell">Teléfono</string>
    <string name="vacio">Aun no has comprado divisas</string>
    <string name="FX_KEY">xnbdxk7XVYtqUOm3TnJtSnaUUESc4ayI</string>
    <string name="comprar">Comprar</string>
</resources>